<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bartosz.fiszki.Settings"
    android:orientation="vertical"
    >


    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/languagePreference"
            >
        </TextView>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/sLanguage"
            >
        </Spinner>
    </LinearLayout>
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/category"
            >
        </TextView>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/sCategory"
            >
        </Spinner>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/random"
            android:layout_weight="1"
            >

        </TextView>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:id="@+id/cbRandom" />


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/showKnownWord"
            android:layout_weight="1"
            >

        </TextView>


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/cbShowKnownWord"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >

        <TextView
            android:gravity="center_vertical"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/teachType"
            android:layout_weight="1"
            >

        </TextView>

<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/rbLanguageGroup"

    >

<RadioButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/engPl"
    android:layoutDirection="rtl"
    android:id="@+id/rbEngPl"
    />

    <RadioButton
        android:text="@string/plEng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:id="@+id/rbPlEng"

        />



</RadioGroup>




    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:width="120dp"
            android:height="60dp"
            android:text="@string/change"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:id="@+id/bEditWord"
            android:onClick="EditWordButtonOnClick"
            />
    </RelativeLayout>

</LinearLayout>
