<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bartosz.fiszki.BackupActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/activity_edit_word"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.bartosz.fiszki.EditWord">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            >

            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/last_synchorization"
                >

            </TextView>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            >

            <TextView
                android:id="@+id/tvLastSynchronizationDate"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                >

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            >

            <Button
                android:id="@+id/bReadDataBase"
                android:text="@string/readFromGoogle"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:onClick="ReadDataButtonOnClick"
                >

            </Button>

            <Button
                android:id="@+id/bSaveDataBase"
                android:text="@string/writeToGoogle"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:onClick="SaveDataButtonOnClick"
                >

            </Button>

        </LinearLayout>



    </LinearLayout>


</LinearLayout>
